scripts/nullaway/annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8.txt
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Attacker.java:44: error: [NullAway] initializer method does not guarantee @NonNull fields ah (line 15), capturedNodes (line 19), availableNodes (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Attacker(String attackerName){
           ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/AttackerHelper.java:34: error: [NullAway] initializer method does not guarantee @NonNull field apw (line 22) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public AttackerHelper(Network net, int budget, String attackerName, String defenderName, String graphName)
           ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Network.java:88: error: [NullAway] returning @Nullable expression from method with @NonNull return type
			return null;
			^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Network.java:94: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/DefenderHelper.java:40: error: [NullAway] initializer method does not guarantee @NonNull field pw (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefenderHelper(Network network, String graphFile, String defenderName)
           ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/DefenderHelper.java:60: error: [NullAway] initializer method does not guarantee @NonNull field pw (line 31) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefenderHelper(String defenderName, String graphFile){
           ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/AttackerMonitor.java:76: error: [NullAway] read of @NonNull field history before initialization
        history.close();
        ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/GameMaster.java:171: error: [NullAway] method returns @Nullable, but superclass method securitygame.Attacker.makeSingleAction() returns @NonNull
			public AttackerAction makeSingleAction() {
			                      ^
    (see http://t.uber.com/nullaway )
../annotator/url9a01f43c15_poragchowdhury_securitygame_tgz-pJ8-securitygame_GameMasterJ8/src/securitygame/Parser.java:84: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return null;
		^
    (see http://t.uber.com/nullaway )
9 errors
